test/types/type_variables/deitz/test_error1.good
Error: Unresolved call 'foo(:C(int))' (test_error1.chpl:14)
Candidates are:
  foo(i: int) (test_error1.chpl:10)
