test/types/type_variables/deitz/test_error1.chpl
class C {
  type t;
  var x : t;
}

var c = C(int);

writeln(c);

fun foo(i : int) {
  writeln(i);
}

foo(c);
